after removing resend email feature

--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.378.0",
     "mongoose": "^8.3.2",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.3",
+    "node-mailjet": "^6.0.5",
+    "nodemailer": "^6.9.13",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-email": "^2.1.2",
     "react-hook-form": "^7.51.4",
     "resend": "^3.2.0",
+    "sib-api-v3-sdk": "^8.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tinymce": "^7.1.0",
@@ -42,8 +45,9 @@
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/nodemailer": "^6.4.15",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
